# FakeLib

./: CMakeLists.txt  README.md
GoogleTest/: CMakeLists.txt  Main_TestAll.cpp  Test_Logger.cpp  Test_Status.cpp  Test_Vector.cpp
Sources/Logger/C/: CMakeLists.txt  logger.c
Sources/Logger/Include/: logger.h
Sources/Status/: CMakeLists.txt
Sources/Status/C/: CMakeLists.txt  status.c
Sources/Status/Include/: status.h
Sources/Vector/C/: CMakeLists.txt  vector.c
Sources/Vector/Include/: vector.h
